--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <small>Copyright &copy; <script>document.write(new Date().getFullYear())</script> (David Salamanca, <a href="https://github.com/david199832"> </a>) </small>
+                    <small>Copyright &copy; <script>document.write(new Date().getFullYear())</script> (David Salamanca <a href="https://github.com/david199832"> </a>) </small>
                     <p>Site designed for CSC483 Cryptology at <a href="https://www.unbosque.edu.co/">Universidad El Bosque</a></p>    
                     <p><a href="https://github.com/david199832">GitHub Repository</a></p>
                 </div>
