--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <p class="lead" style="text-align: center;">N-Graphs</p>
                             <ul class="nav nav-tabs">
                                 <li  class="active">
-                                    <a href="#1" data-toggle="tab">Frequency Order</a>
+                                    <a href="#1" data-toggle="tab">Orden de Frecuencia</a>
                                 </li>
                                 <li>
                                     <a href="#2" data-toggle="tab">Alphabetical Order</a>
