--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
                             
                         </div>
                         <br/>
-                        <label class="checkbox-inline"><input type="checkbox" id="formatCheckbox" value="">Retain Formatting?</label><br/>
-                        <a href="#" data-toggle="offcanvas" data-target=".sidebar-nav" class="btn btn-primary" onclick="encipher_Clicked()">Encipher</a>
-                        <a href="#" data-toggle="offcanvas" data-target=".sidebar-nav" class="btn btn-primary" onclick="decipher_Clicked()">Decipher</a><br/><br/>
-                        <a href="#" data-toggle="offcanvas" data-target=".sidebar-nav" class="btn btn-primary" onclick="clear_Clicked()">Clear</a>
+                        <label class="checkbox-inline"><input type="checkbox" id="formatCheckbox" value="">Mantener el formato?</label><br/>
+                        <a href="#" data-toggle="offcanvas" data-target=".sidebar-nav" class="btn btn-primary" onclick="encipher_Clicked()">Cifrar</a>
+                        <a href="#" data-toggle="offcanvas" data-target=".sidebar-nav" class="btn btn-primary" onclick="decipher_Clicked()">Decifrar</a><br/><br/>
+                        <a href="#" data-toggle="offcanvas" data-target=".sidebar-nav" class="btn btn-primary" onclick="clear_Clicked()">Limpiar</a>
                     </div>
                 </div>
             </div>
